<resources>
    <string name="app_name">Dyética</string>
    <string name="create_new_dietetic_profile_name">Crear perfil diétetico</string>
    <string name="edit_dietetic_profile_name">Editar perfil diétetico</string>
    <string name="title_blog">Blog</string>
    <string name="title_foro">Foro</string>
    <string name="title_dyetica">¿Dyetica?</string>
    <string name="title_help">Ayuda</string>
    <string name="title_balancer_plus">Equilibrador Plus</string>
    <string name="title_profile">Mi perfil</string>
    <string name="title_bases_and_objectives">Bases y objetivos</string>
    <string name="title_perfil_dietetico">Perfil dietético</string>
    <string name="title_perfiles_dieteticos">Perfiles dietéticos</string>
    <string name="ingredients">Ingredientes</string>
    <string name="empty_ingredients">Faltan ingredientes</string>
    <string name="composition_h">H:</string>
    <string name="composition_p">P:</string>
    <string name="composition_f">G:</string>
    <string name="balance_text">Equilibrado</string>
    <string name="unbalanced">Desequilibrado</string>
    <string name="balance_balance">Equilibrado</string>
    <string name="balance_fast">Equilibrado (Se mantienen reservas)</string>
    <string name="light_protein_deficit">Déficit proteico ligero</string>
    <string name="medium_protein_deficit">Déficit proteico medio</string>
    <string name="severe_protein_deficit">Déficit proteico severo</string>
    <string name="light_protein_excess">Exceso proteico ligero</string>
    <string name="medium_protein_excess">Exceso proteico medio</string>
    <string name="severe_protein_excess">Exceso proteico severo</string>
    <string name="light_fats_deficit">Déficit grasas ligero</string>
    <string name="medium_fats_deficit">Déficit grasas medio</string>
    <string name="severe_fats_deficit">Déficit grasas severo</string>
    <string name="light_fats_excess">Exceso grasas ligero</string>
    <string name="medium_fats_excess">Exceso grasas medio</string>
    <string name="severe_fats_excess">Exceso grasas severo</string>
    <string name="dialog_get_data">Obteniendo datos</string>
    <string name="navigation_drawer_open">Abriendo menú</string>
    <string name="navigation_drawer_close">Cerrando menú</string>
    <string name="action_settings">Ajustes</string>
        <string name="title_activity_login">Dyética</string>
    <string name="status_200">200</string>
    <string name="status_500">500</string>
    <string name="status_400">400</string>
    <string name="status_401">401</string>
    <string name="error_load_data">Ocurrio un error al cargar los datos, compruebe que tiene conexión a internet o vuelva a intentarlo más tarde</string>
    <string name="error_authetication">Ha caducado la sesión, por favor vuelva a conectar</string>
    <string name="error_connection">Error de conexión, vuelva a intentarlo más tarde</string>
    <string name="prompt_password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_incorrect_date">Fecha no válida (Formato: dd-mm-aaaa)</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="attempt_login">"Iniciando sesión &#8230;"</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_surname1">Primer apellido</string>
    <string name="prompt_surname2">Segundo apellido</string>
    <string name="prompt_birthay_day">Fecha de nacimiento</string>
    <string name="prompt_postal_code">Código postal</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_email">E-mail</string>
    <string name="error_sync_server">Error al actualizar los datos con el servidor</string>
    <string name="prompt_kcal">Kcal/dia</string>
    <string name="prompt_c_grasae">C. de grasa</string>
    <string name="prompt_breakfast">Desayuno</string>
    <string name="prompt_lunch">Almuerzo</string>
    <string name="prompt_food">Comida</string>
    <string name="prompt_snack">Merienda</string>
    <string name="prompt_dinner">Cena</string>
    <string name="prompt_rate">Ritmo (grs/semana)</string>
    <string name="create_profile">Crear perfil</string>
    <string name="save">Guardar</string>
    <string name="calculate">Calcular</string>
    <string name="prompt_grams">Cantidad en gramos</string>
    <string name="add">Añadir</string>
    <string name="add_ingredient">Añadir ingrediente</string>
    <string name="create_ingredient">Crear ingredientes</string>
    <string name="my_ingredients">Mis ingredientes</string>
    <string name="delete">Eliminar</string>
    <string name="update">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="categories">Categorias</string>
    <string name="food_text">Alimentos</string>
    <string name="location_food">Ubicación</string>
    <string name="url_bases_and_objectives">http://dyetica.com/app/restapi/basesyobjetivos</string>
    <string name="url_dyetica">http://dyetica.com/app/restapi/dyetica</string>
    <string name="url_login">http://dyetica.com/app/restapi/login</string>
    <string name="url_update_profile">http://dyetica.com/app/restapi/updateinfo</string>
    <string name="url_dietetic_profile">http://dyetica.com/app/restapi/perfil/</string>
    <string name="url_dietetic_profile_create">http://dyetica.com/app/restapi/setperfil</string>
    <string name="url_personal_food">http://dyetica.com/app/restapi/personalfood</string>
    <string name="url_extensions_profile">http://dyetica.com/app/restapi/parametersperfil</string>
    <string name="url_ideal_weight">http://dyetica.com/app/restapi/pesoideal</string>
    <string name="url_food">http://dyetica.com/app/restapi/food/</string>
    <string name="url_extensions_balancer_plus">http://dyetica.com/app/restapi/parametersequilibrador</string>
    <string name="url_add_personal_food">http://dyetica.com/app/restapi/updatepersonalfood</string>
    <string name="url_delete_personal_food">http://dyetica.com/app/restapi/deletepersonalfood</string>
    <string name="status">status</string>
    <string name="error">error</string>
    <string name="message">message</string>
    <string name="error_questions_1">Campo requerido en la pregunta 1</string>
    <string name="error_questions_2">Campo requerido en la pregunta 2</string>
    <string name="error_questions_3">Campo requerido en la pregunta 3</string>
    <string name="error_create">Error creando la tabla en base de datos</string>
    <string name="dropError">Error eliminando las tablas de la base de datos</string>
    <string name="createError">Error al crear las tablas en base de datos</string>
    <string name="insertUserError">Error no se ha podido insertar en base de datos los datos del usuario</string>
    <string name="insertError">Error no se ha podido insertar en base de datos</string>
    <string name="deleteError">Error al eliminar la tabla en base de datos</string>
    <string name="dateError">Error al formatear la fecha</string>
    <string name="update_successful">Los datos han sido modificados correctamente</string>
    <string name="update_profile_error">Error al guardar los datos</string>
    <string name="constant_dyetica">DYETICA</string>
    <string name="constant_base_and_objectives">BANDO</string>
    <string name="update_error">Error al actualizar la tabla</string>
    <string name="selectError">Error no se ha podido ejecutar la consulta</string>
    <string name="bold">bold</string>
    <string name="balancerPlus">Equilibrador Plus</string>
    <string name="nav_dietetic_profile">Perfiles dietéticos</string>
    <string name="dietetic_profile">Perfil Nº 1 dietético</string>
    <string name="dietetic_profile_2">Perfil Nº 2 dietético</string>
    <string name="content_new_dietetic_profile">Crear un perfil te permite tener un mayor control de las calorías que necesitas diariamente y su distribución en las comidas, además de poder personalizar tu Equilibrador Plus</string>
    <string name="title_new_dietetic_profile">No tienes un perfil creado</string>
    <string name="date_dietetic_profile">Última actualización: </string>
    <string name="text_1_dietetic_profile">Cálculos</string>
    <string name="text_2_dietetic_profile">Distribución calórica recomendada</string>
    <string name="add_food">Añadir ingrediente</string>
    <string name="update_food">Editar ingrediente</string>
    <string name="sex_tilte">Sexo</string>
    <string name="height_tilte">Altura</string>
    <string name="weight_tilte">Peso</string>
    <string name="complexion_tilte">Complexión</string>
    <string name="physical_activity_tilte">Actividad física</string>
    <string name="stage_tilte">Etapa</string>
    <string name="objectives_profile">Objetivos del perfil:</string>
    <string name="characteristics_text">Define tus caracteristicas físicas:</string>
    <string name="feeding_habits">Define tus hábitos alimentarios:</string>
    <string name="habits_tomorrow">Por la mañana &#8230;¿què prefieres?</string>
    <string name="habits_midday">A mediodía &#8230;</string>
    <string name="habits_night">Por la noche &#8230;</string>
    <string name="pre1_opc1">Desayuno fuerte y almuerzo ligero</string>
    <string name="pre1_opc2">Desayuno mediano y almuerzo mediano</string>
    <string name="pre1_opc3">Desayuno ligero y almuerzo fuerte</string>
    <string name="pre2_opc1">1er plato ligero y 2º plato fuerte</string>
    <string name="pre2_opc2">1er plato mediano y 2º plato mediano</string>
    <string name="pre3_opc1">1er plato ligero y 2º plato fuerte</string>
    <string name="pre3_opc2">1er plato mediano y 2º plato mediano</string>
    <string name="create_profile_dietetic">Crear</string>
    <string name="edit_profile_dietetic">Modificar</string>
    <string name="prompt_profile_name">Nombre del perfil</string>
    <string name="name_food_hint">Nombre</string>
    <string name="prompt_weight">Peso neto</string>
    <string name="prompt_fats">Grasas</string>
    <string name="prompt_protein">Proteinas</string>
    <string name="prompt_hydrates">Hidratos</string>
    <string name="prompt_portion">Raciones</string>
    <string name="prompt_kcal_balance">Kcal./Ración</string>
    <string name="relation_hydrates_protein">Relación entre H / P:</string>
    <string name="relation_fats">Relación con grasas:</string>
    <string name="other">Otros</string>
    <string name="fruit">Frutas</string>
    <string name="fats">Aceites</string>
    <string name="vegetables">Verduras</string>
    <string name="estate">Raices</string>
    <string name="meats">Carnes</string>
    <string name="sausages">Embutidos</string>
    <string name="seafood">Mariscos</string>
    <string name="pulse">Legumbres</string>
    <string name="fish">Pescados</string>
    <string name="cereals">Cereales</string>
    <string name="sweet">Dulces</string>
    <string name="drinks">Bebidas</string>
    <string name="nuts">Frutos secos</string>
    <string name="dairy_products">Lacteos</string>
    <string name="sauces">Salsas</string>
    <string name="eggs">Huevos</string>
    <string name="not_food">No hay alimentos</string>
    <string name="error_dialog_add_food">Falta seleccionar un alimento o añadir los gramos</string>
    <string name="customize">Personalizar</string>
    <string name="balance">Equilibrar</string>
    <string name="composition_pro"><span style='font-size:50px;'>Composición:</span></string>
    <string name="composition">Composición:</string>
    <string name="composition_mini">Comp:</string>
</resources>