<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dyetica.app.CreateNewDieteticProfile2Activity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarCreate2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeding_habits"
        android:id="@+id/textViewHabits"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="157dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habits_tomorrow"
        android:id="@+id/textViewHabitsTomorrow"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="57dp">
        <RadioButton android:id="@+id/radio_pre1_opc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre1_opc1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_pre1_opc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre1_opc2"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_pre1_opc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre1_opc3"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/habits_midday"
    android:id="@+id/textViewHabitsMidday"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="57dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="157dp">
        <RadioButton android:id="@+id/radio_pre2_opc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre2_opc1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_pre2_opc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre2_opc2"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habits_night"
        android:id="@+id/textViewHabitsNight"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="257dp" >
        <RadioButton android:id="@+id/radio_pre3_opc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre2_opc1"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_pre3_opc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre2_opc2"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objectives_profile"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="257dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_tilte"
        android:id="@+id/textViewWeight"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="451dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_objective"
        android:layout_below="@+id/view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="101dp"
        android:entries="@array/weight"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_rate"
        android:layout_marginTop="285dp"
        android:id="@+id/view">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:maxLength="10"
            android:id="@+id/editTextRate"
            android:paddingBottom="@dimen/padding_profile_bottom"
            android:layout_gravity="center_horizontal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_profile"
        android:id="@+id/button_create_profile_dietetic"
        android:layout_gravity="bottom"
        android:theme="@style/ButtonApp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
